src/objects/QPMS__Assessment__c.object
<CustomObject>
    <description>This object is used to store assessment questions for course.</description>
    <fields>
        <fullName>QPMS__Assessment_Library__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores assessment libraryvalue</description>
        <label>Assessment  Library</label>
        <referenceTo>QPMS__Assessment_Library__c</referenceTo>
        <relationshipLabel>Assessment  Questionss</relationshipLabel>
        <relationshipName>Assessment_Questionss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Assessment_Questions_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used  store question template</description>
        <label>Assessment Questions Template</label>
        <referenceTo>QPMS__Assessment_Questions_Template__c</referenceTo>
        <relationshipLabel>Assessment  Questionss</relationshipLabel>
        <relationshipName>Assessment_Questionss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__QuestionExt__c</fullName>
        <description>this field is used to store  ext id</description>
        <externalId>true</externalId>
        <label>QuestionExt</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Question__c</fullName>
        <description>This field stores assessment question.</description>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Assessment  Questions</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AQ-{0000}</displayFormat>
        <label>Assessment  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment  Questionss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>